<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_accounts"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_accounts" />
    <item
        android:id="@+id/nav_groups"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_groups" />
    <item
        android:id="@+id/nav_campaign"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_campaign" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>
